Fix input size overflow

--- a/src/definitions/elements/input.less
+++ b/src/definitions/elements/input.less
@@ -35,6 +35,7 @@
 }
 .ui.input input {
   margin: 0em;
+  max-width: 100%;
   flex: 1 0 auto;
   outline: none;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
