--- a/src/definitions/modules/dropdown.less
+++ b/src/definitions/modules/dropdown.less
@@ -57,7 +57,7 @@
   min-width: 100%;
 
   white-space: @menuWrap;
-  font-size: 1rem;
+  font-size: @relativeMedium;
   text-shadow: none;
   text-align: @menuTextAlign;
 
